# fastchar

./: .gitignore  CMakeLists.txt  README.md  TODO.md  license.txt  meson.build  todo.txt
src/: cfg.c  cfg.h  dbg.h  debug.h  main.c  ui.c  ui.h  x11.c  x11.h
